# LumiRender

./: .gitignore  .gitmodules  README.md
LumiRender/: CMakeLists.txt  CMakePresets.json  todo_list.md
LumiRender/asset/: CMakeLists.txt
LumiRender/cmake/: Config.cmake.in  FindOptiX.cmake  check_cuda.cu  configure_cuda.cmake  configure_optix.cmake
LumiRender/doc/: Build.md  blenderexporter.md  brdf-note.md  bssrdf-node.md  luminous.material.schema.json  luminous.schema.json  luminous.shape.shcema.json  luminous.texture.schema.json  progressbar.schema.json  sample.luminous.json
LumiRender/exporters/b2l/: README.md  __init__.py  auto_load.py  exporter.py  material_nodes.py  panel.py  test.py
LumiRender/exporters/blender/: main.py
LumiRender/exporters/blender2luminous/: README.md  __init__.py  material_nodes.py  panel.py  render_exporter.py  render_panel.py
LumiRender/exporters/for_blender/: __init__.py  render_exporter.py  render_panel.py
LumiRender/res/: sdl.md
LumiRender/res/image/: png2exr.exr  png2exr.hdr
LumiRender/res/render_scene/bathroom2/: LICENSE.txt  lumi_scene.json  tungsten_scene.json
LumiRender/res/render_scene/coffee/: lumi_scene.json  scene.json  tungsten_scene.json
LumiRender/res/render_scene/cornell-box/: LICENSE.txt  lumi_scene.json  tungsten_scene.json
LumiRender/res/render_scene/glass-of-water/: lumi_scene.json
LumiRender/res/render_scene/kitchen/: lumi_scene.json  tungsten_scene.json
LumiRender/res/render_scene/living-room/: lumi_scene.json
LumiRender/res/render_scene/spaceship/: lumi_scene.json  tungsten_scene.json
LumiRender/res/render_scene/staircase/: lumi_scene.json  tungsten_scene.json
LumiRender/res/render_scene/staircase2/: LICENSE.txt  TungstenRender.exr  lumi_scene.json  tungsten_scene.json
LumiRender/res/render_scene/water-caustic/: LICENSE.txt  TungstenRender.exr  lumi_scene.json  tungsten_scene.json
LumiRender/res/test_scenes/blender_scene/: cbox.blend  cbox.blend1  cornell_box.blend  cornell_box.blend1
LumiRender/res/test_scenes/cornell_box/: cornell_box.mtl  scene.json  scene_all.json  scene_model.json  scene_simple.json
LumiRender/res/test_scenes/export_scene/: scene.json
LumiRender/res/test_scenes/gltf_scene/: scene.gltf
LumiRender/res/test_scenes/output/: scene.json
LumiRender/src/: CMakeLists.txt  LumiRender.natvis  luminous.h  playground.py  stats.py
LumiRender/src/apps/: CMakeLists.txt  lm_denoiser.cpp  luminous-cli.cpp  luminous-gui.cpp  luminous-ui.cpp  luminous.cpp
LumiRender/src/backend/: accel.h  buffer.h  device.h  dispatcher.h  kernel.h  texture.h
LumiRender/src/backends/cuda/: CMakeLists.txt  cuda_acceleration.h  cuda_device.cpp
LumiRender/src/backends/include/: buffer.h  device.h
LumiRender/src/base_libs/: CMakeLists.txt  header.h  string_util.h
LumiRender/src/base_libs/geometry/: box.h  common.h  frame.h  transform.h  util.h
LumiRender/src/base_libs/lstd/: CMakeLists.txt  common.h  complex.h  function_trait.h  lstd.h  variant.h
LumiRender/src/core/: CMakeLists.txt  atomic.h  atomic_util.h  concepts.h  context.cpp  context.h  fileio.cpp  fileio.h  film_denoiser.h  hash.cpp  hash.h  header.h  ispc_common.isph  logging.cpp  logging.h  lstd.h  macro.h  macro_map.h  model.cpp  model.h  parameter_set.h  parser.cpp  parser.h  platform.cpp  platform.h  ray_hit.h  reflection.cpp  reflection.h  scene.h  scene_parser.h  stats.h  string_util.h  type_reflection.h  warp.h
LumiRender/src/cpu/: CMakeLists.txt  cpu_impl.cpp  cpu_impl.h  cpu_scene.cpp  cpu_scene.h  cpu_task.cpp  cpu_task.h  embree_accel.cpp  embree_accel.h  embree_util.h  mipmap.h
LumiRender/src/denoise/: CMakeLists.txt  denoiser.cpp  denoiser.h
LumiRender/src/ext/: CMakeLists.txt
LumiRender/src/gpu/: CMakeLists.txt  core_exception.h  denoise_temporal_flow.cu  film_optix_denoiser.cpp  film_optix_denoiser.h  gpu_include.h  gpu_scene.cpp  gpu_scene.h  mega_kernel_pt.cpp  mega_kernel_pt.h  megakernel_pt.cpp  megakernel_pt.h  scene.cpp  scene.h  shader_data.h  wavefront_pt.cpp  wavefront_pt.h
LumiRender/src/graphic/: header.h  string_util.h
LumiRender/src/graphics/: CMakeLists.txt  common.h  header.h  string_util.h
LumiRender/src/lstd/: vector.h
LumiRender/src/owl/: APIHandle.h  Buffer.h  CMakeLists.txt  Context.cpp  Context.h  DeviceContext.cpp  DeviceContext.h  DeviceMemory.h  LaunchParams.cpp  LaunchParams.h  Module.cpp  Object.h  ObjectRegistry.cpp  RegisteredObject.h  SBTObject.cpp  SBTObject.h  Texture.cpp  Texture.h  Triangles.cu  Triangles.h  TrianglesGeomGroup.h  UserGeom.h  UserGeomGroup.h  Variable.cpp  Variable.h  impl.cpp
LumiRender/src/parser/: CMakeLists.txt  assimp_parser.cpp  assimp_parser.h  config.cpp  config.h  json_parser.cpp  mesh_util.ispc  parameter_set.h  parser.h  scene_graph.cpp  scene_graph.h  shape.cpp  shape.h
LumiRender/src/render/: CMakeLists.txt  plugin.h
LumiRender/src/sdk_pt/: CMakeLists.txt  demo_bvh.h  optixPathTracer.cpp  optixPathTracer.cu  optixPathTracer.h  test_bvh.h
LumiRender/src/tests/: CMakeLists.txt  cuda_tex_test.cpp  distribution2d_test.cpp  math_cuda.cpp  math_test.cpp  play_ground.cpp  playground.cpp  test_arena.cpp  test_basic.cpp  test_brdf.cpp  test_bxdfs.cpp  test_camera.cpp  test_cuda.cu  test_embree.cpp  test_graphics.cpp  test_image_io.cpp  test_kernel_launch.cpp  test_light.h  test_lstd.cpp  test_parallel.cpp  test_pt.cpp  test_ptr_helper.cpp  test_reflection.cpp  test_sampler.cpp  test_soa.cpp  test_upload.cpp  test_variant.cpp
LumiRender/src/tools/: CMakeLists.txt  stats_line_num.py  tungsten2lumi.py
LumiRender/src/ui/: CMakeLists.txt
LumiRender/src/util/: CMakeLists.txt  array.h  assimp_parser.cpp  assimp_parser.h  clock.h  image.cpp  image.h  image_base.h  image_io.cpp  image_io.h  image_util.ispc  json_parser.cpp  json_parser.h  memory.cpp  memory.h  parallel.cpp  parallel.h  parameter_set.h  parser.cpp  parser.h  pixel_format.h  progressreporter.cpp  progressreporter.h  stats.cpp  stats.h  thread_pool.cpp  thread_pool.h
LumiRender/src/view/: CMakeLists.txt  application.cpp  application.h  gl_helper.h  luminous_view_config.h
(+574 files in other folders)
